--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,13 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# Ignore all .env files
+.env
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
+
 
 # vercel
 .vercel
